<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.4</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>com.zjw</groupId>
    <artifactId>ai-agent</artifactId>
    <packaging>jar</packaging>
    <version>1.0</version>
    <name>ai-agent</name>
    <description>ai-agent</description>

    <properties>
        <java.version>21</java.version>
        <lombok.version>1.18.36</lombok.version>
        <hutool.version>5.8.37</hutool.version>
        <knife4j.version>4.5.0</knife4j.version>
        <dashscope.version>2.22.17</dashscope.version>
        <spring-ai-alibaba-agent-framework.version>1.1.2.2</spring-ai-alibaba-agent-framework.version>
        <spring-ai-alibaba-starter-dashscope.version>1.1.2.2</spring-ai-alibaba-starter-dashscope.version>
        <langchain4j.version>1.13.1-beta23</langchain4j.version>
        <spring-ai-ollama.version>1.0.0-M6</spring-ai-ollama.version>
        <jsonschema.version>4.38.0</jsonschema.version>
        <kryo.version>5.6.2</kryo.version>
        <sensitive-word.version>0.11.0</sensitive-word.version>
        <spring-ai-markdown-document-reader.version>1.1.2</spring-ai-markdown-document-reader.version>
        <spring-ai-advisors-vector-store.version>1.1.2</spring-ai-advisors-vector-store.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>cn.hutool</groupId>
            <artifactId>hutool-all</artifactId>
            <version>${hutool.version}</version>
        </dependency>

        <dependency>
            <groupId>com.github.xiaoymin</groupId>
            <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
            <version>${knife4j.version}</version>
        </dependency>

        <!-- SDK接入LLM -->
<!--        <dependency>-->
<!--            <groupId>com.alibaba</groupId>-->
<!--            <artifactId>dashscope-sdk-java</artifactId>-->
<!--            <version>${dashscope.version}</version>-->
<!--            <scope>compile</scope>-->
<!--        </dependency>-->

        <!-- Spring AI Alibaba接入LLM -->
        <!-- 1. Agent Framework（智能体框架） -->
        <dependency>
            <groupId>com.alibaba.cloud.ai</groupId>
            <artifactId>spring-ai-alibaba-agent-framework</artifactId>
            <version>${spring-ai-alibaba-agent-framework.version}</version>
        </dependency>

        <!-- 2. DashScope Starter（通义千问模型支持） -->
        <dependency>
            <groupId>com.alibaba.cloud.ai</groupId>
            <artifactId>spring-ai-alibaba-starter-dashscope</artifactId>
            <version>${spring-ai-alibaba-starter-dashscope.version}</version>
        </dependency>

        <!-- langchain4j接入LLM -->
<!--        <dependency>-->
<!--            <groupId>dev.langchain4j</groupId>-->
<!--            <artifactId>langchain4j-community-dashscope</artifactId>-->
<!--            <version>${langchain4j.version}</version>-->
<!--        </dependency>-->

        <!-- 项目中接入本地部署的LLM -->
<!--        <dependency>-->
<!--            <groupId>org.springframework.ai</groupId>-->
<!--            <artifactId>spring-ai-ollama-spring-boot-starter</artifactId>-->
<!--            <version>${spring-ai-ollama.version}</version>-->
<!--        </dependency>-->

        <!-- 支持结构化输出 -->
        <dependency>
            <groupId>com.github.victools</groupId>
            <artifactId>jsonschema-generator</artifactId>
            <version>${jsonschema.version}</version>
        </dependency>

        <!-- 高性能序列化库：支持基于文件读写的序列化/反序列化 -->
        <dependency>
            <groupId>com.esotericsoftware</groupId>
            <artifactId>kryo</artifactId>
            <version>${kryo.version}</version>
        </dependency>

        <!-- DFA敏感词过滤工具 -->
        <dependency>
            <groupId>com.github.houbb</groupId>
            <artifactId>sensitive-word</artifactId>
            <version>${sensitive-word.version}</version>
        </dependency>

        <!-- markdown文档读取工具 -->
        <dependency>
            <groupId>org.springframework.ai</groupId>
            <artifactId>spring-ai-markdown-document-reader</artifactId>
            <version>${spring-ai-markdown-document-reader.version}</version>
        </dependency>

        <!-- 向量数据库 -->
        <dependency>
            <groupId>org.springframework.ai</groupId>
            <artifactId>spring-ai-advisors-vector-store</artifactId>
            <version>${spring-ai-advisors-vector-store.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <!--仓库-->
    <repositories>
        <!--阿里云仓库-->
        <repository>
            <id>aliyun</id>
            <name>aliyun-maven</name>
            <url>https://maven.aliyun.com/repository/public/</url>
        </repository>
        <repository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/milestone</url>
        </repository>
        <repository>
            <id>central</id>
            <name>Maven Central</name>
            <url>https://repo.maven.apache.org/maven2/</url>
        </repository>
    </repositories>

    <!--插件仓库-->
    <pluginRepositories>
        <!--阿里云插件仓库-->
        <pluginRepository>
            <id>aliyun-plugin</id>
            <name>aliyun-maven-plugin</name>
            <url>https://maven.aliyun.com/repository/public/</url>
        </pluginRepository>
        <pluginRepository>
            <id>central-plugin</id>
            <name>Maven Central Plugin</name>
            <url>https://repo.maven.apache.org/maven2/</url>
        </pluginRepository>
    </pluginRepositories>
</project>
